Make all of partest work in the sbt build
- Fix the scoping of files/lib/*.jar. These files were not on the
  classpath when running partest from sbt.

- Pass the same standard Java options to partest as from the command
  line. This requires new versions of scala-partest and
  scala-partest-interface.

- Fix the classpath scanning in jvm/innerClassEnclMethodJavaReflection.
  It only worked for JARs and relative directories but not for absolute
  directory paths (which are produced by sbt).